# recog_letter

./: BUILD  CMakeLists.txt  README.md  RecogLetter.cc  RecogLetter.h
main/: CMakeLists.txt  RecogLetter.h  main.cc
